# ragequit-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs  unix.rs  windows.rs
tests/: many_listeners.rs  no_listeners.rs  slow_listeners.rs  wait.rs
