[package]
name = "ragequit"
version = "0.1.1"
edition = "2021"
description = "Gracefully shut down a process"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/ragequit-rs"
documentation = "https://docs.rs/ragequit"
license = "MIT OR Apache-2.0"

[dependencies]
pin-project = "1.0.12"
tokio = { version = "1.24.1", features = ["sync", "parking_lot"] }

[dev-dependencies]
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["macros", "rt", "rt-multi-thread", "time"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.26.1", features = ["signal"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Console"] }
